# MFEMSetUpAML

./: .gitignore  CMakeLists.txt  README.md
mesh/: AnnularCylinder-tet.mesh  PDMSpuck-hex.mesh  PDMSpuck-scaled-hex.mesh  PDMSpuck-scaled-tet.mesh  PDMSpuck-tet.mesh  PDMSpuck-unscaled-hex.mesh
scripts/: MFEM_mesh_generation.nb  SimulationParameters.json
source/: isotropic_elasticity.cpp  isotropic_elasticity_prl.cpp
